Refactorización jugador completada

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -4,10 +4,10 @@ dock_filesystem_split=-122
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=24
+dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=249
+dock_hsplit_2=226
 dock_hsplit_3=-238
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Explosion.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Componentes/", "res://Objetos/", "res://Entidades/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Bum.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos combates/", "res://Componentes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,26 +28,27 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Explosion.tscn")
-current_scene="res://Entidades/Explosion.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Chooty.tscn", "res://Entidades/Elementos combates/Barril.tscn", "res://Componentes/ElementalState.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/BurbujaTar.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn")
+current_scene="res://Pruebas.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Burbuja_tar.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Vida.gd"]
+open_scripts=["res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd", "res://Scripts/Elementos puzzles/Puerta.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
 open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Explosion.gd"
+selected_script="res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd"
 
 [editor_log]
 
 log_filter_0=true
 log_filter_2=true
 log_filter_1=false
-log_filter_3=true
+log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
