--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,32 @@
-[res://Scripts/Cuki.gd]
+[res://Scripts/Enemigos/Blonk.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 129,
+"scroll_position": 75.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Componentes/ElementalStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Componentes/GenerAyudas.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -6,101 +34,69 @@ state={
 "column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 346,
-"scroll_position": 355.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Rabion.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 42,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 33,
-"scroll_position": 30.0,
-"selection": true,
-"selection_from_column": 42,
-"selection_from_line": 33,
-"selection_to_column": 53,
-"selection_to_line": 33,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Barril_b.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(33),
-"column": 11,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 30,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Explosion.gd]
+[res://Scripts/Componentes/Salud.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
+"row": 31,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/ExplosiveEater.gd]
+[res://Scripts/Enemigos/Chooty.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 50,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 101,
+"scroll_position": 74.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Enemigos/Rabion.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 73,
+"scroll_position": 151.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Enemigos/Bum.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
 "folded_lines": Array[int]([92, 108, 123, 147]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 14.0,
+"row": 10,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Chooty.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 28,
-"folded_lines": Array[int]([28, 82, 95, 109, 117, 138, 146, 154, 160, 163, 176, 180, 184, 187]),
-"h_scroll_position": 0,
-"row": 39,
-"scroll_position": 29.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Piedra.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 53,
-"scroll_position": 47.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Palanca.gd]
+[res://Scripts/Elementos puzzles/Palanca.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -114,49 +110,53 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Piedra_a_z.gd]
+[res://Scripts/Elementos puzzles/Puerta.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 26,
+"scroll_position": 19.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Elementos combate/Barril.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 30,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 30,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Burbuja_tar.gd]
+[res://Scripts/Elementos combate/Explosion.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 16.0,
+"row": 28,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Dardo_veneno.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 17,
-"scroll_position": 6.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Vida.gd]
+[res://Scripts/Elementos combate/Vida.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -170,35 +170,49 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Puerta.gd]
+[res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 20.0,
+"row": 28,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Enemigos/Blonk.gd]
+[res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 80,
-"scroll_position": 74.0,
+"row": 26,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Componentes/ElementalStateMachine.gd]
+[res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(84, 89),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 31,
+"row": 28,
+"scroll_position": 29.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -206,40 +220,22 @@ state={
 "column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 6.0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Componentes/GenerAyudas.gd]
+[res://Scripts/Aliados/Cuki.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
-"folded_lines": Array[int]([]),
+"column": 14,
+"folded_lines": Array[int]([38, 91, 106, 114, 183, 259, 273, 277, 284, 287, 357, 360, 371]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 1.0,
+"row": 45,
+"scroll_position": 34.0,
 "selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Componentes/Salud.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 84,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 3.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 84,
-"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
