--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=226
+dock_hsplit_2=170
 dock_hsplit_3=-238
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Bum.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos combates/", "res://Componentes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Chooty.tscn", "res://Entidades/Elementos combates/Barril.tscn", "res://Componentes/ElementalState.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/BurbujaTar.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn")
+open_scenes=PackedStringArray("res://Pruebas.tscn")
 current_scene="res://Pruebas.tscn"
-center_split_offset=-252
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -41,7 +41,7 @@ open_scripts=["res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Enemig
 open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd"
+selected_script="res://Scripts/Enemigos/Chooty.gd"
 
 [editor_log]
 
