--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 158,
+"scroll_position": 144.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 31,
-"scroll_position": 24.0,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 34,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 101,
+"h_scroll_position": 37,
+"row": 82,
 "scroll_position": 74.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -131,9 +131,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 30,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 157,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 16.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 5,
@@ -179,7 +179,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 28,
-"scroll_position": 14.0,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -202,12 +202,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(84, 89),
-"column": 1,
+"breakpoints": PackedInt32Array(),
+"column": 31,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 31,
-"row": 28,
-"scroll_position": 29.0,
+"h_scroll_position": 0,
+"row": 86,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
