--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 *.cfg
 *.cfg
 Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+Cuki-Clash of the Kuins/.godot/editor/filesystem_cache8
+Cuki-Clash of the Kuins/.godot/editor/filesystem_update4
+Cuki-Clash of the Kuins/.godot/editor/project_metadata.cfg
+Cuki-Clash of the Kuins/.godot/editor/Pruebas.tscn-editstate-9b745b16bc66a88f82a7dc2c9e747f6c.cfg
+Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
