--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 158,
-"scroll_position": 144.0,
-"selection": false,
+"row": 14,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 14,
+"selection_to_column": 7,
+"selection_to_line": 14,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 37,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 37,
-"row": 82,
-"scroll_position": 74.0,
+"h_scroll_position": 0,
+"row": 184,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,12 +77,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 44,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 73,
-"scroll_position": 151.0,
-"selection": false,
+"h_scroll_position": 62,
+"row": 131,
+"scroll_position": 113.0,
+"selection": true,
+"selection_from_column": 44,
+"selection_from_line": 131,
+"selection_to_column": 61,
+"selection_to_line": 131,
 "syntax_highlighter": "GDScript"
 }
 
@@ -87,11 +95,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([92, 108, 123, 147]),
+"column": 125,
+"folded_lines": Array[int]([172]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 2.0,
+"row": 113,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -175,12 +183,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 4.0,
-"selection": false,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 5,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -189,11 +201,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 12.0,
+"row": 28,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,11 +243,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([38, 91, 106, 114, 183, 259, 273, 277, 284, 287, 357, 360, 371]),
+"column": 43,
+"folded_lines": Array[int]([38, 91, 106, 114, 183, 259, 273, 277, 284, 287, 360, 371]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 34.0,
+"row": 358,
+"scroll_position": 124.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
