Ultimo porteo (baterias y puertas)

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
+dock_hsplit_2=343
 dock_hsplit_3=-238
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Proyectiles Chooty/BurbujaTar.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos combates/", "res://Componentes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Elementos combates/Barril.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos puzzles/", "res://Entidades/Elementos combates/", "res://Entidades/Aliados/", "res://Componentes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,20 +28,20 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/BurbujaTar.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/DardoVeneno.tscn")
-current_scene="res://Pruebas.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/BurbujaTar.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/DardoVeneno.tscn", "res://Entidades/Elementos combates/Explosion.tscn", "res://Entidades/Elementos combates/Barril.tscn")
+current_scene="res://Entidades/Elementos combates/Barril.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd", "res://Scripts/Elementos puzzles/Puerta.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
+open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Elementos puzzles/Bateria.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Elementos puzzles/Bloque_hielo.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Elementos puzzles/Motor.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd", "res://Scripts/Elementos puzzles/Puerta.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
 open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Enemigos/Chooty.gd"
+selected_script="res://Scripts/Elementos combate/Barril.gd"
 
 [editor_log]
 
