--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -14,13 +14,13 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Elementos combates/Barril.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos puzzles/", "res://Entidades/Elementos combates/", "res://Entidades/Aliados/", "res://Componentes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Elementos combates/Vida.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/BurbujaTar.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/DardoVeneno.tscn", "res://Entidades/Elementos combates/Explosion.tscn", "res://Entidades/Elementos combates/Barril.tscn")
-current_scene="res://Entidades/Elementos combates/Barril.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Elementos combates/Vida.tscn", "res://Entidades/Aliados/Cuki.tscn")
+current_scene="res://Entidades/Aliados/Cuki.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
@@ -41,7 +41,7 @@ open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elem
 open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Elementos combate/Barril.gd"
+selected_script="res://Scripts/Aliados/Cuki.gd"
 
 [editor_log]
 
