Carga de telefono

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,20 +7,20 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=343
-dock_hsplit_3=-238
+dock_hsplit_2=170
+dock_hsplit_3=-576
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Elementos combates/Vida.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Bum.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos combates/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,9 +28,9 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Elementos combates/Vida.tscn", "res://Entidades/Aliados/Cuki.tscn")
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Blonk.tscn", "res://Entidades/Enemigos/Chooty.tscn", "res://Entidades/Enemigos/Bum.tscn", "res://Entidades/Aliados/Cuki.tscn")
 current_scene="res://Entidades/Aliados/Cuki.tscn"
-center_split_offset=-288
+center_split_offset=-387
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=4
