--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 129,
-"scroll_position": 75.0,
+"scroll_position": 115.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 184,
-"scroll_position": 185.0,
+"scroll_position": 170.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -97,9 +97,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 125,
 "folded_lines": Array[int]([172]),
-"h_scroll_position": 0,
+"h_scroll_position": 508,
 "row": 113,
-"scroll_position": 0.0,
+"scroll_position": 99.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -127,7 +127,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
-"scroll_position": 11.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,11 +165,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 15,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,11 +239,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
-"folded_lines": Array[int]([38, 91, 106, 114, 183, 259, 273, 277, 284, 287, 364, 375]),
+"column": 18,
+"folded_lines": Array[int]([2, 42, 58, 98, 113, 121, 190, 266, 280, 284, 291, 294, 368, 379]),
 "h_scroll_position": 0,
-"row": 359,
-"scroll_position": 121.0,
+"row": 56,
+"scroll_position": 86.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
