--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
-dock_hsplit_3=-576
+dock_hsplit_2=239
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -20,7 +20,7 @@ dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Bum.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Entidades/Elementos combates/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Elementos puzzles/", "res://Componentes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,20 +28,20 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Blonk.tscn", "res://Entidades/Enemigos/Chooty.tscn", "res://Entidades/Enemigos/Bum.tscn", "res://Entidades/Aliados/Cuki.tscn")
-current_scene="res://Entidades/Aliados/Cuki.tscn"
-center_split_offset=-387
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Aliados/Cuki.tscn", "res://Componentes/GenerAyudas.tscn", "res://Entidades/Enemigos/Bum.tscn")
+current_scene="res://Entidades/Enemigos/Bum.tscn"
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Elementos puzzles/Bateria.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Elementos puzzles/Bloque_hielo.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Elementos puzzles/Motor.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd", "res://Scripts/Elementos puzzles/Puerta.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
+open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Elementos puzzles/Bateria.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Elementos puzzles/Bloque_hielo.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://EnemySpawner.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Elementos puzzles/Motor.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd", "res://Scripts/Elementos puzzles/Puerta.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
 open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Aliados/Cuki.gd"
+selected_script="res://Scripts/Enemigos/Bum.gd"
 
 [editor_log]
 
