--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
+"column": 5,
+"folded_lines": Array[int]([106, 116]),
 "h_scroll_position": 0,
-"row": 129,
-"scroll_position": 115.0,
-"selection": false,
+"row": 131,
+"scroll_position": 114.0,
+"selection": true,
+"selection_from_column": 33,
+"selection_from_line": 127,
+"selection_to_column": 5,
+"selection_to_line": 131,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,16 +21,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 14,
-"selection_to_column": 7,
-"selection_to_line": 14,
+"row": 194,
+"scroll_position": 193.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,10 +35,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 7,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 151,
-"row": 31,
-"scroll_position": 29.0,
+"h_scroll_position": 0,
+"row": 41,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
-"folded_lines": Array[int]([]),
+"column": 22,
+"folded_lines": Array[int]([2, 9, 19]),
 "h_scroll_position": 0,
-"row": 184,
-"scroll_position": 170.0,
+"row": 249,
+"scroll_position": 229.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,17 +76,13 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 44,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 62,
-"row": 131,
-"scroll_position": 113.0,
-"selection": true,
-"selection_from_column": 44,
-"selection_from_line": 131,
-"selection_to_column": 61,
-"selection_to_line": 131,
+"breakpoints": PackedInt32Array(140),
+"column": 35,
+"folded_lines": Array[int]([35, 53, 67, 76, 87, 91, 104, 142, 145, 152, 155, 158, 168]),
+"h_scroll_position": 0,
+"row": 168,
+"scroll_position": 50.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 125,
-"folded_lines": Array[int]([172]),
-"h_scroll_position": 508,
-"row": 113,
-"scroll_position": 99.0,
+"column": 34,
+"folded_lines": Array[int]([189]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 81.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -126,8 +122,8 @@ state={
 "column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
+"row": 34,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,11 +133,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 3.0,
+"row": 23,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 1.0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -201,7 +197,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 28,
-"scroll_position": 14.0,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 86,
-"scroll_position": 11.0,
+"scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,11 +235,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
-"folded_lines": Array[int]([2, 42, 58, 98, 113, 121, 190, 266, 280, 284, 291, 294, 368, 379]),
+"column": 8,
+"folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
 "h_scroll_position": 0,
-"row": 56,
-"scroll_position": 86.0,
+"row": 22,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -267,10 +263,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
+"row": 19,
 "scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -300,6 +296,20 @@ state={
 "h_scroll_position": 0,
 "row": 52,
 "scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://EnemySpawner.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
