--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Bum.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Elementos puzzles/", "res://Componentes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Componentes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Aliados/Cuki.tscn", "res://Componentes/GenerAyudas.tscn", "res://Entidades/Enemigos/Bum.tscn")
-current_scene="res://Entidades/Enemigos/Bum.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn", "res://Componentes/GenerAyudas.tscn")
+current_scene="res://Pruebas.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -41,7 +41,7 @@ open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elem
 open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Enemigos/Bum.gd"
+selected_script="res://EnemySpawner.gd"
 
 [editor_log]
 
