--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -35,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 76,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
+"h_scroll_position": 61,
+"row": 42,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([2, 9, 19]),
 "h_scroll_position": 0,
 "row": 249,
-"scroll_position": 229.0,
+"scroll_position": 224.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -93,9 +93,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 34,
 "folded_lines": Array[int]([189]),
-"h_scroll_position": 0,
+"h_scroll_position": 244,
 "row": 27,
-"scroll_position": 81.0,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,12 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 18.0,
-"selection": false,
+"row": 2,
+"scroll_position": 2.0,
+"selection": true,
+"selection_from_column": 14,
+"selection_from_line": 2,
+"selection_to_column": 17,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,12 +211,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 77.0,
-"selection": false,
+"row": 23,
+"scroll_position": 20.0,
+"selection": true,
+"selection_from_column": 15,
+"selection_from_line": 23,
+"selection_to_column": 35,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -239,7 +247,7 @@ state={
 "folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
 "h_scroll_position": 0,
 "row": 22,
-"scroll_position": 2.0,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -308,8 +316,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 9,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
