Generación de baterias por ataques electricos y enemigos.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ Cuki-Clash of the Kuins/.godot/editor/filesystem_update4
 Cuki-Clash of the Kuins/.godot/editor/project_metadata.cfg
 Cuki-Clash of the Kuins/.godot/editor/Pruebas.tscn-editstate-9b745b16bc66a88f82a7dc2c9e747f6c.cfg
 Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+Cuki-Clash of the Kuins/.godot/editor/filesystem_cache8
+Cuki-Clash of the Kuins/.godot/editor/filesystem_update4
+Cuki-Clash of the Kuins/.godot/editor/project_metadata.cfg
+Cuki-Clash of the Kuins/.godot/editor/Pruebas.tscn-editstate-9b745b16bc66a88f82a7dc2c9e747f6c.cfg
+Cuki-Clash of the Kuins/.godot/editor/Pruebas.tscn-folding-9b745b16bc66a88f82a7dc2c9e747f6c.cfg
+Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+Cuki-Clash of the Kuins/.godot/global_script_class_cache.cfg
