--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=239
+dock_hsplit_2=231
 dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Rabion.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Componentes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn", "res://Componentes/GenerAyudas.tscn")
-current_scene="res://Pruebas.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Componentes/ElementalState.tscn", "res://Componentes/GenerAyudas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn")
+current_scene="res://Componentes/GenerAyudas.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,10 +38,10 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Elementos puzzles/Bateria.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Elementos puzzles/Bloque_hielo.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Burbuja_tar.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://EnemySpawner.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Elementos puzzles/Motor.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra_a_z.gd", "res://Scripts/Elementos puzzles/Puerta.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
-open_help=["ElementalState", "Input", "Salud"]
+open_help=["Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://EnemySpawner.gd"
+selected_script="res://Scripts/Componentes/GenerAyudas.gd"
 
 [editor_log]
 
