--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -21,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 194,
-"scroll_position": 193.0,
+"row": 162,
+"scroll_position": 152.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -34,12 +34,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 76,
+"breakpoints": PackedInt32Array(40),
+"column": 36,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 61,
-"row": 42,
-"scroll_position": 36.0,
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -210,17 +210,13 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 35,
+"breakpoints": PackedInt32Array(88, 89),
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 20.0,
-"selection": true,
-"selection_from_column": 15,
-"selection_from_line": 23,
-"selection_to_column": 35,
-"selection_to_line": 23,
+"row": 12,
+"scroll_position": 9.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -243,11 +239,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 5,
 "folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 17.0,
+"row": 64,
+"scroll_position": 44.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -317,7 +313,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
