Arreglos por la actualización de la rama

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([106, 116]),
 "h_scroll_position": 0,
 "row": 131,
-"scroll_position": 114.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 33,
 "selection_from_line": 127,
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 162,
-"scroll_position": 152.0,
+"scroll_position": 156.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -39,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 18.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([2, 9, 19]),
 "h_scroll_position": 0,
 "row": 249,
-"scroll_position": 224.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(140),
-"column": 35,
+"column": 31,
 "folded_lines": Array[int]([35, 53, 67, 76, 87, 91, 104, 142, 145, 152, 155, 158, 168]),
 "h_scroll_position": 0,
-"row": 168,
-"scroll_position": 50.0,
+"row": 135,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -93,9 +93,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 34,
 "folded_lines": Array[int]([189]),
-"h_scroll_position": 244,
+"h_scroll_position": 0,
 "row": 27,
-"scroll_position": 28.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -215,7 +215,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -243,7 +243,7 @@ state={
 "folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
 "h_scroll_position": 0,
 "row": 64,
-"scroll_position": 44.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -314,6 +314,20 @@ state={
 "h_scroll_position": 0,
 "row": 9,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Totem.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 84,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 47,
+"row": 9,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
