Arreglo en daño de Rabions

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 162,
-"scroll_position": 152.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -37,9 +37,9 @@ state={
 "breakpoints": PackedInt32Array(40),
 "column": 36,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 37,
 "row": 15,
-"scroll_position": 18.0,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,12 +76,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(140),
-"column": 35,
-"folded_lines": Array[int]([35, 53, 67, 76, 87, 91, 104, 142, 145, 152, 155, 158, 168]),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([35, 53, 67, 87, 104, 139, 151, 154, 157, 167]),
 "h_scroll_position": 0,
-"row": 168,
-"scroll_position": 50.0,
+"row": 125,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,7 +137,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 14,
 "selection_from_line": 2,
@@ -215,7 +215,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
-"scroll_position": 9.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -243,7 +243,7 @@ state={
 "folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
 "h_scroll_position": 0,
 "row": 64,
-"scroll_position": 44.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -267,11 +267,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 14.0,
+"row": 15,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -299,7 +299,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 52,
-"scroll_position": 3.0,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
