--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-57
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=231
+dock_hsplit_2=170
 dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -20,7 +20,7 @@ dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Enemigos/Rabion.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/", "res://Componentes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/Enemigos/Proyectiles Chooty/", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Enemigos/Proyectiles Chooty/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,12 +28,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Componentes/ElementalState.tscn", "res://Componentes/GenerAyudas.tscn", "res://Entidades/Enemigos/Proyectiles Chooty/Piedra.tscn")
-current_scene="res://Componentes/GenerAyudas.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Aliados/Cuki.tscn", "res://Entidades/Enemigos/Rabion.tscn", "res://Componentes/ElementalState.tscn", "res://Entidades/Elementos puzzles/Motor.tscn")
+current_scene="res://Pruebas.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
@@ -41,7 +40,7 @@ open_scripts=["res://Scripts/Elementos puzzles/Antorcha.gd", "res://Scripts/Elem
 open_help=["Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Componentes/GenerAyudas.gd"
+selected_script="res://Scripts/Enemigos/Rabion.gd"
 
 [editor_log]
 
