Creación Totem venenoso y adaptación a puertas

--- a/Cuki-Clash of the Kuins/.godot/global_script_class_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/global_script_class_cache.cfg
@@ -10,4 +10,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/Componentes/Salud.gd"
+}, {
+"base": &"StaticBody2D",
+"class": &"Totem",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Elementos puzzles/Totem.gd"
 }])
