--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 1,
 "folded_lines": Array[int]([106, 116]),
 "h_scroll_position": 0,
-"row": 131,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 33,
-"selection_from_line": 127,
-"selection_to_column": 5,
-"selection_to_line": 131,
+"row": 30,
+"scroll_position": 26.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 162,
-"scroll_position": 156.0,
+"row": 194,
+"scroll_position": 190.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -39,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 36.0,
+"row": 31,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 25,
 "folded_lines": Array[int]([2, 9, 19]),
 "h_scroll_position": 0,
-"row": 249,
-"scroll_position": 0.0,
+"row": 213,
+"scroll_position": 198.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,12 +72,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(140),
-"column": 31,
+"breakpoints": PackedInt32Array(),
+"column": 0,
 "folded_lines": Array[int]([35, 53, 67, 76, 87, 91, 104, 142, 145, 152, 155, 158, 168]),
 "h_scroll_position": 0,
-"row": 135,
-"scroll_position": 9.0,
+"row": 6,
+"scroll_position": 38.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,12 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
-"selection": false,
+"row": 5,
+"scroll_position": 3.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 10,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -123,7 +123,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 34,
-"scroll_position": 25.0,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,7 +137,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 14,
 "selection_from_line": 2,
@@ -155,7 +155,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 28,
-"scroll_position": 14.0,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -169,7 +169,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
-"scroll_position": 0.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -179,16 +179,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 3,
-"selection_to_column": 5,
-"selection_to_line": 3,
+"row": 18,
+"scroll_position": 3.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -197,11 +193,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 6.0,
+"row": 21,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,11 +235,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
+"column": 0,
+"folded_lines": Array[int]([2, 18, 44, 57, 115, 123, 192, 285, 289, 296, 299, 373, 384]),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 0.0,
+"row": 110,
+"scroll_position": 92.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -299,7 +295,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 52,
-"scroll_position": 3.0,
+"scroll_position": 44.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -318,16 +314,34 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Totem.gd]
+[res://Scripts/Elementos puzzles/Totem.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 84,
+"column": 19,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 47,
-"row": 9,
-"scroll_position": 6.0,
+"h_scroll_position": 0,
+"row": 92,
+"scroll_position": 88.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 90,
+"selection_to_column": 19,
+"selection_to_line": 92,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Elementos puzzles/TotemVenenoso.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 8,
+"row": 5,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
