Creación maquina de estados

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([106, 116]),
 "h_scroll_position": 0,
 "row": 131,
-"scroll_position": 114.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 33,
 "selection_from_line": 127,
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 162,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -37,9 +37,9 @@ state={
 "breakpoints": PackedInt32Array(40),
 "column": 36,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 37,
+"h_scroll_position": 0,
 "row": 15,
-"scroll_position": 16.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,7 +53,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 41,
-"scroll_position": 36.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([2, 9, 19]),
 "h_scroll_position": 0,
 "row": 249,
-"scroll_position": 224.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,12 +77,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
-"folded_lines": Array[int]([35, 53, 67, 87, 104, 139, 151, 154, 157, 167]),
+"column": 23,
+"folded_lines": Array[int]([53, 87, 104, 139, 151, 154, 157, 167]),
 "h_scroll_position": 0,
-"row": 125,
+"row": 2,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 20,
+"selection_from_line": 2,
+"selection_to_column": 23,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
 
@@ -93,9 +97,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 34,
 "folded_lines": Array[int]([189]),
-"h_scroll_position": 244,
+"h_scroll_position": 0,
 "row": 27,
-"scroll_position": 28.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,7 +127,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 34,
-"scroll_position": 25.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -155,7 +159,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 28,
-"scroll_position": 14.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -201,7 +205,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 28,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -215,7 +219,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,11 +243,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": Array[int]([2, 44, 268, 282, 286, 293, 296, 370, 381]),
+"column": 13,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 0.0,
+"row": 83,
+"scroll_position": 76.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -271,7 +275,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 15.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -299,12 +303,12 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 52,
-"scroll_position": 36.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://EnemySpawner.gd]
+[res://Scripts/EnemySpawner.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -314,6 +318,34 @@ state={
 "h_scroll_position": 0,
 "row": 9,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/EstadoBase.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/MaquinaEstados.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 38,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 17,
+"row": 29,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
